--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-experiment",
+  "homepage": "http://sjoerdvalk.github.io/react-experiment",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
