--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-experiment",
-  "homepage": "http://sjoerdvalk.github.io/react-experiment",
+  "baseUrl": "sjoerdvalk1991.github.io/react-experiment/",
+  "homepage": "sjoerdvalk1991.github.io/react-experiment/",
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
